--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         #app {
             position: relative;
             box-sizing: border-box;
-            border: solid 1px white;
+            border: solid 1px rgba(255, 255, 255, 0.55);
             width: 78px;
             height: 30px;
             line-height: 30px;
             color: white;
-            background-color: #333;
+            background-color: rgba(6, 95, 212, 0.75);
             cursor: default;
             font-family: cursive;
             font-size: 16px;
