--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
+        .date #time {
+            width: 100%;
+        }
+
+        .date #eye {
+            display: none;
+        }
     </style>
 </head>
 <body>
