--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
             background-size: cover;
         }
 
-        .date #time {
+        /* 日期显示 .date */
+        #app.date #time {
             width: 100%;
         }
 
-        .date #eye {
+        #app.date #eye {
             display: none;
+        }
+
+        /* 幽灵模式 .ghost */
+        #app.ghost {
+            opacity: 0.2;
         }
     </style>
 </head>
